# trash

./: README.md  global_voxel_filter copy.cpp  test.txt
drone_nav/drone_nav_bringup/: CMakeLists.txt  package.xml
drone_nav/drone_nav_bringup/launch/: drone_in_a_box_bringup.launch.py
drone_nav/drone_nav_bringup/params/: nav_pipeline_params.yaml  position.yaml  position.yaml_backup
drone_nav/drone_nav_bringup/rviz/: path_planner.rviz
drone_nav/drone_nav_bt/: CMakeLists.txt  package.xml
drone_nav/drone_nav_controller/: CMakeLists.txt  package.xml
drone_nav/drone_nav_controller/src/: demo.py  teleop_controller.py
drone_nav/drone_nav_path_planner/: CMakeLists.txt  package.xml
drone_nav/drone_nav_path_planner/launch/: planner_node.launch.py
drone_nav/drone_nav_path_planner/pcd/: cloudCorner.pcd  cloudSurf.pcd  cloud_map.bt  octomap_config.yaml  trajectory.pcd  transformations.pcd  voxelized.pcd
drone_nav/drone_nav_path_planner/src/: global_voxel_filter.cpp  local_planner.cpp  local_voxel_filter.cpp  path.cpp  path_planner.cpp  voxel_filter.cpp
drone_nav/drone_nav_path_planner/srv/: Pos.srv
drone_nav/drone_nav_path_planner/temp/: bidirectional_path.cpp  local_planner.py  local_voxel_filter copy.cpp  octomap2np.py  path copy.cpp  path.py  pathservice_template.cpp  pcd_publisher.py  trash.cpp  trash.py  voxel_filter copy.cpp
